--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Basic Example with External JSX</title>
+    <title>MozApoy</title>
   </head>
 
   <body>
-    <h1>Basic Example with External JSX</h1>
+    <h1>MozApoy</h1>
     <div id="container">
     <script src="../../build/react.js"></script>
     <script src="../../build/react-dom.js"></script>
