--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <h1>MozApoy</h1>
     <div id="container">
-    <script src="../../build/react.js"></script>
-    <script src="../../build/react-dom.js"></script>
+    <script src="./build/react.js"></script>
+    <script src="./build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
 
     <script type="text/babel" src="js/form.js"></script>
